packages/typ/tests/fixtures/diagnostics/0628_functor_call_abstract_function_int_08.ml.infer.expected
File "0628_functor_call_abstract_function_int_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0628_functor_call_abstract_function_int_08 is not a valid module name.

File "0628_functor_call_abstract_function_int_08.ml", line 7, characters 15-16:
7 |   let y = X.id 7
                   ^
Error: The constant 7 has type int but an expression was expected of type X.t
